fleshed out some functionality and css. need to resolve shiftDecoy issue and build landing page

--- a/main.css
+++ b/main.css
@@ -3,23 +3,29 @@
 .box{
 
 }
-
-.start{
-height:20px;
-width:100px;
-border: 1px solid black;
-margin: 0 auto;
-margin-bottom: 10px;
-text-align:center;
-box-shadow: 10px 10px 42px -2px rgba(0,0,0,.5);
+*{
+	font-family:'Shadows Into Light' ;
 }
 
-.roundNum{
+.start{
 height:50px;
 width:100px;
-border: 1px solid black;
+/*border: 1px solid black;*/
+margin: 0 auto;
+margin-bottom: 10px;
+padding-top:20px;
+text-align:center;
+box-shadow: 10px 10px 42px -2px rgba(0,0,0,.5);
+border-radius:30px;
+}
+
+.roundBox{
+height:50px;
+width:100px;
+/*border: 1px solid black;*/
 margin: 0 auto;
 text-align:center;
+padding-top: 20px;
 
 }
 
